--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="map-container">
-            <h2>Find Us Here</h2>
+            <h2>Find Us</h2>
             <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15955.15266073607!2d36.8219466!3d-1.2863895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f174c1a47b58b%3A0x36b4508b9eaa5a5a!2sNairobi%2C%20Kenya!5e0!3m2!1sen!2ske!4v1633974941925!5m2!1sen!2ske" 
                 width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
